objects/EFPIO__OrchestrationEvent__c.object
<CustomObject>
    <description>Orchestration Event</description>
    <fields>
        <fullName>EFPIO__CorrelationId__c</fullName>
        <description>Correlation Id</description>
        <label>Correlation Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFPIO__EventId__c</fullName>
        <label>-D Event Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFPIO__EventLogId__c</fullName>
        <label>Event Log Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFPIO__PerformAsync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the the intent of this event is to be run asynchronously in a different transaction scope via a Queuable or run Synchronously in the executing transaction scope.</description>
        <label>Perform Asynchronously</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EFPIO__Status__c</fullName>
        <description>Status of the Event</description>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Orchestration Event</label>
    <nameField>
        <displayFormat>OE-{0000}</displayFormat>
        <label>Orchestration Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orchestration Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>